ggplot2 1.0.1
----------------------------------------------------------------

* Tweaked default `theme_grey()` background colour from grey90 to grey92:
  this makes the background recede into the background a little more.

* Bumped the default `size` for `geom_smooth()` up to 1. To continue to use
  the previous size, set `size = 0.5`. `geom_smooth()` gains explicit
  `method`, `se` and `formula` arguments to make it easier to see what the
  most important options are.

* `geom_jitter()` gains `width` and `height` arguments to make it easier
  to control the amount of jittering without using the lengthy
  `position_jitter()` function (#1116)

* ggplot2 now exports `alpha()` from the scales package. This means you
  don't need to do `library(scales)` or `scales::alpha()` to access that
  handy function (#1107).

* Improved documentation for `aes()` and many geoms.

* Fixes to pass `R CMD check --run-donttest` in R-devel.

ggplot2 1.0.0
----------------------------------------------------------------

NEW FEATURES

* New coordinate system for small scale maps. `coord_quickmap()` computes and
  sets the correct aspect ratio between one degree of latitude and one degree
  of longitude at the centre of the plotted region. It does not perform full
  fledged mapping projection as `coord_map()` does and therefore is much
  faster. Yet, it gives a correct approximation for small scale maps (a few
  degrees in either direction) at medium to low latitudes (@jiho, #922).

* `geom_boxplot` gain new `varwidth` argument for controlling whether or not
  the width of boxplots should be proportional to the size of the groups
  (@tsieger, #927).

* `position_jitterdodge()` combines `position_jitter()` and `position_dodge()`,
  allowing the user to plot and align points generated by e.g. `geom_point()`
  with those generated by a dodged `geom_boxplot()`. See
  `example(position_jitterdodge)` for a potential usage. (@kevinushey, #932)
